--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 first meal is on us!
               </p>
 
-              <form class="cta-form" action="#" netlify>
+              <form class="cta-form"  name="sign-up" netlify>
                 <div>
                   <label for="full-name">Your Name</label>
                   <input
