added names to form fields

--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
                     id="full-name"
                     type="text"
                     placeholder="Dean Winchester"
+                    name="full-name"
                   />
                 </div>
                 <div>
@@ -575,12 +576,13 @@
                     id="email"
                     type="email"
                     placeholder="rockindean@example.com"
+                    name="email"
                   />
                 </div>
 
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select id="select-where" required>
+                  <select id="select-where" name="where?" required>
                     <option value="">Choose one:</option>
                     <option value="friends">Friends & family</option>
                     <option value="youtube">Youtube Video</option>
